<resources>
    <string name="_7_day_forecast">7-DAY FORECAST</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed. You can remove it, or search for the app and install it manually.</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_resize">Resize</string>
    <string name="activate">Active</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="ad_app_id">ca-app-pub-3055946504065222~7834831449</string>
    <string name="ad_unit_id">ca-app-pub-3055946504065222/6410069133</string>
    <string name="ad_unit_id_weather">ca-app-pub-3055946504065222/7303779522</string>
    <string name="ad_unit_id_weather_rewarded">ca-app-pub-3055946504065222/8583441297</string>
    <string name="add_remove_background">Add/Remove Background</string>
    <string name="add_to_folder">Add to folder: %1$s</string>
    <string name="add_to_folder_with_app">Add to folder with %1$s</string>
    <string name="add_widget">Add widget</string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="all_apps_loading_message">Loading Apps…</string>
    <string name="all_apps_no_search_results">No Apps found matching \"%1$s\"</string>
    <string name="all_apps_search_bar_hint">Search Apps…</string>
    <string name="all_apps_search_market_message">Go to %1$s</string>
    <string name="all_day">All day</string>
    <string name="allow_rotation_title">Allow rotation</string>
    <string name="and"> and </string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animations">Animations</string>
    <string name="announce_selection">Selected %1$s</string>
    <string name="app_downloading_title">%1$s downloading, %2$s complete</string>
    <string name="app_filter_class" />
    <string name="app_library">App Library</string>
    <string name="app_name">iOS Launcher</string>
    <string name="app_setting_title">Live Wallpaper</string>
    <string name="app_waiting_download_title">%1$s waiting to install</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_not_found">Application not found!</string>
    <string name="applications">Applications</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="assistive_touch">Assistive Touch</string>
    <string name="atmospheric_pressure_on_the_sea_level">Atmospheric pressure on the sea level.</string>
    <string name="audio">Audio</string>
    <string name="auto_rearrange_apps">Auto Rearrange Apps</string>
    <string name="auto_refresh">Auto refresh</string>
    <string name="avoid_sunlight">Avoid sunlight from 10:00 – 16:00</string>
    <string name="battery">Batteries</string>
    <string name="blur_dock">Blur dock</string>
    <string name="blur_effect">Blur effect</string>
    <string name="blur_folder">Blur folder</string>
    <string name="blur_search_bar">Blur search bar</string>
    <string name="blur_widget">Blur widget</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="calendar">Calendar</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="category">Category</string>
    <string name="change_default_home_dialog_body">Set %1$s is Default Launcher</string>
    <string name="change_icon">Change icon</string>
    <string name="change_name">Change name</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_your_wallpaper">Choose Your Wallpaper</string>
    <string name="clear">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clock">Clock</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="cloudy">Cloudy</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="configure">Configure</string>
    <string name="control_center">Control center</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_folder_with">Create folder with: %1$s</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_wallpaper">Crop wallpaper</string>
    <string name="customize">Customize</string>
    <string name="danger">Danger</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="delay">Speed</string>
    <string name="delete_app">Delete</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="dock_bar">Dock bar</string>
    <string name="done">Done</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="download_other_app">Download other my apps</string>
    <string name="hidden_apps">Hidden Apps</string>
    <string name="info_target_label">App info</string>
    <string name="layout">Layout</string>
    <string name="liquid_glass">Liquid Glass</string>
    <string name="notification_badges">Notification badges</string>
    <string name="rate_title">Rating 5 star</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_experience">Please rate 5 star to support developer. Thank you so much!</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_suggestions">Share for us your problem and we will fix it!</string>
    <string name="suggestions_to_use_blur_effect">Starting from Android 13, 3rd apps cannot get the wallpaper to make blur effect. So, to use blur effect for dock, folders, widget pages and app gallery… You must to choose your favorite image and set wallpaper from my app. Let\'s do it now !</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="weather">Weather</string>
    <string name="which_wallpaper_option_lock_screen">Lock screen</string>
    <string name="widget_button_text">Widgets</string>
</resources>