<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    app:bounceDelay="400"
    app:damping="2"
    app:incrementalDamping="true"
    app:triggerOverScrollThreshold="36">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_settings_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:contentPadding="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/settings_group_suggest_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/lock_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_lock_screen"
                    app:settingText="@string/which_wallpaper_option_lock_screen"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/control_center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_control_center"
                    app:settingText="@string/control_center"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/assistive_touch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:hideDivider="true"
                    app:settingIcon="@drawable/ic_assistive_touch"
                    app:settingText="@string/assistive_touch"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:contentPadding="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/settings_group_settings_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/utilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_dock"
                    app:settingText="@string/layout"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/config_widget"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingIcon="@drawable/ic_widget_settings"
                    app:settingText="@string/widget_button_text"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/config_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_weather"
                    app:settingText="@string/weather"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/config_liquid_glass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_liquid_glass"
                    app:settingText="@string/liquid_glass"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/config_blur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_blur"
                    app:settingText="@string/blur_effect"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/config_animation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_anim"
                    app:settingText="@string/animations"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/choose_wallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_image"
                    app:settingText="@string/wallpaper_button_text"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/change_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_icon"
                    app:settingText="@string/change_icon"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/change_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_text"
                    app:settingText="@string/change_name"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/app_library"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_library"
                    app:settingText="@string/app_library"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/hidden_apps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:settingIcon="@drawable/ic_hidden"
                    app:settingText="@string/hidden_apps"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/notification_badges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:hideDivider="false"
                    app:settingIcon="@drawable/ic_badge"
                    app:settingText="@string/notification_badges"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/make_default_launcher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    app:hideDivider="true"
                    app:settingIcon="@drawable/ic_default"
                    app:settingText="Make Default Launcher"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:contentPadding="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/settings_group_rating_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingIcon="@drawable/ic_star"
                    app:settingText="@string/rate_title"/>
                <com.luutinhit.launcherios.customsettings.SettingsItem
                    android:id="@+id/download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hideDivider="true"
                    app:settingIcon="@drawable/ic_download"
                    app:settingText="@string/download_other_app"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</merge>
