<?xml version="1.0" encoding="utf-8"?>
<com.luutinhit.launcher6.SearchDropTargetBar xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:id="@+id/drag_target_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_weight="1"
            style="@style/DropTargetButtonContainer">
            <com.luutinhit.launcher6.DeleteDropTarget
                android:id="@+id/delete_target_text"
                android:text="@string/delete_target_label"
                style="@style/DropTargetButton"/>
        </FrameLayout>
        <FrameLayout
            android:layout_weight="1"
            style="@style/DropTargetButtonContainer">
            <com.luutinhit.launcher6.InfoDropTarget
                android:id="@+id/info_target_text"
                android:text="@string/info_target_label"
                style="@style/DropTargetButton"/>
        </FrameLayout>
        <FrameLayout
            android:layout_weight="1"
            style="@style/DropTargetButtonContainer">
            <com.luutinhit.launcher6.UninstallDropTarget
                android:id="@+id/uninstall_target_text"
                android:text="@string/delete_target_uninstall_label"
                style="@style/DropTargetButton"/>
        </FrameLayout>
    </LinearLayout>
</com.luutinhit.launcher6.SearchDropTargetBar>
