<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dialog_rating_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:id="@+id/dialog_rating_app_name"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/app_name"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:id="@+id/dialog_rating_title"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/rating_dialog_experience"/>
        <RatingBar
            android:id="@+id/dialog_rating_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:numStars="5"
            android:stepSize="1"/>
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/dialog_rating_feedback_title"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/rating_dialog_feedback_title"/>
        <EditText
            android:gravity="start|top"
            android:id="@+id/dialog_rating_feedback"
            android:background="@drawable/edittext_background"
            android:padding="10dp"
            android:visibility="gone"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/rating_dialog_suggestions"
            android:maxLines="10"
            android:lines="8"
            android:minLines="6"
            android:inputType="textMultiLine"
            android:labelFor="@+id/dialog_rating_feedback_title"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/dialog_rating_feedback_buttons"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:animateLayoutChanges="true">
            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/accent"
                android:id="@+id/dialog_rating_button_feedback_cancel"
                android:background="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_dialog_cancel"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/accent"
                android:id="@+id/dialog_rating_button_feedback_submit"
                android:background="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_dialog_submit"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/dialog_rating_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:animateLayoutChanges="true">
            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/accent"
                android:gravity="center"
                android:id="@+id/dialog_rating_button_negative"
                android:background="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_dialog_maybe_later"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/accent"
                android:gravity="center"
                android:id="@+id/dialog_rating_button_never"
                android:background="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_dialog_never"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/accent"
                android:gravity="center"
                android:id="@+id/dialog_rating_button_positive"
                android:background="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_dialog_submit"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
