<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dialog_rating_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:src="@android:drawable/ic_dialog_alert"
            android:tint="@color/red"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:gravity="center"
            android:id="@+id/dialog_rating_app_name"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/blur_effect"/>
        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:id="@+id/dialog_rating_title"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/suggestions_to_use_blur_effect"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/dialog_rating_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:animateLayoutChanges="true">
            <androidx.appcompat.widget.AppCompatButton
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:gravity="center"
                android:id="@+id/dialog_blur_effect_button_negative"
                android:background="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_dialog_maybe_later"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:gravity="center"
                android:id="@+id/dialog_blur_effect_button_never"
                android:background="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating_dialog_never"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:gravity="center"
                android:id="@+id/dialog_blur_effect_button_positive"
                android:background="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
